# benchpressjs

./: .eslintignore  .eslintrc  .eslintrc.json  .gitignore  .gitmodules  .npmignore  .travis.yml  CHANGELOG.md  CNAME  Cargo.toml  Gruntfile.js  LICENSE  README.md  appveyor.yml  docs.md  index.html  index.js  package-lock.json  package.json  params.json  rustfmt.toml  test.html  tokens.js
.github/: issue_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yaml
benchpress_sys/: Cargo.toml
benchpress_sys/src/: generator.rs  instruction.rs  lexer.rs  lib.rs  parser.rs  paths.rs  pre_fixer.rs  templates.rs  token.rs
compiler/: Cargo.toml  bench.rs  readme.md
compiler/src/: generate.rs  lib.rs  parse.rs
compiler/src/generate/: generator.rs  templates.rs
compiler/src/parse/: expression.rs  path.rs  tokens.rs  tree.rs
docs/: api.md  conditionals.md  helpers.md  interpolation.md  iteration.md  operators.md  readme.md
lib/: benchpress.js  compile-render.js  compiler.js  evaluate.js  express.js  precompile.js  runtime.js  shim.js  templates.js  templates.min.js
lib/compiler/: blocks.js  codegen.js  compiler.js  constants.js  debug.js  parser.js  paths.js  prefixer.js  runtime.js  tokenizer.js  tokens.js
lib/transpile/: conditionals.js  fix-relative.js  helpers.js  index.js  loops.js  mustaches.js  transpile.js
rust/benchpress-rs/: README.md  build.js  package.json
rust/benchpress-rs/native/: Cargo.toml
rust/benchpress-rs/native/src/: bcp.rs  generator.rs  lexer.rs  lib.rs  main.rs  minify.rs  parser.rs  paths.rs  pre_fixer.rs  templates.rs
rust/benchpress-rs/native/src/scripts/: minify.js
rust/bpc/: Cargo.toml
tests/: basics.js  bpc.spec.js  compile-render.spec.js  compileParse.js  data.js  data.json  express.spec.js  guard.js  index.html  index.js  main.js  named-blocks.spec.js  native.spec.js  object-keys-error.js  object-keys-error.spec.js  precompile.spec.js  render.spec.js  split.spec.js  templates.js  templates.spec.js  unsafe.js  unsafe.spec.js
tests/bench/: categories.js  categories.json  categories.tpl  compilation.js  index.js  topic.js  topic.json  topic.tpl
tests/benchmarks/: bench.html  complicated-bench.html
tests/client/: basics.js  bind.html  bind.js  data.js  index.html  loader.html  loader.js  sample.html
tests/lib/: basic.js  compileParse.js  compiler.js  express-shim.js  (+8 more)
(+283 files in other folders)
