[package]
name = "compiler"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bench"
path = "bench.rs"

[dependencies]
aho-corasick = "0.7.15"
console_error_panic_hook = "0.1.6"
itertools = "0.10.0"
json = "0.12.4"
lazy_static = "1.4.0"
nom = "6.1.2"
nom_locate = "3.0.0"
wasm-bindgen = "0.2.72"
web-sys = { version = "0.3.49", features = ["console"] }

[dev-dependencies]
pretty_assertions = "0.7.1"
