[package]
name = "compiler"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bench"
path = "bench.rs"

[dependencies]
aho-corasick = "1.1.3"
console_error_panic_hook = "0.1.7"
itertools = "0.14"
json = "0.12.4"
nom = "7.1.3"
nom_locate = "4.1.0"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["console"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
