[package]
name = "benchpress-rs"
version = "0.1.0"
authors = ["Peter Jaszkowiak <p.jaszkow@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "benchpress_rs"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.22"

[dependencies]
neon = "0.1.22"
itertools = "0.7.8"
regex = "1.0.0"
lazy_static = "1.0.0"
onig = "3.2.2"
json = "0.11.13"
